deployment/base/fundus/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fundus
  labels:
    app.kubernetes.io/part-of: fundus
